reference-implementation/quality/receipts/tst2-ingest-failure-shape-0016/post-1-red-then-green-mutant-kill.txt
# hone work tst2-ingest-failure-shape-0016 — post rung 'red-then-green-mutant-kill'
# command: cd "$REPO_ROOT" && sh -c 'if [ -f test/ingest-failures-oracle.test.js ]; then src=runtime/ingest-failures.js; bak=/tmp/tst2_ingest_failure_shape_0016.bak; cp "$src" "$bak"; perl -0pi -e "s/if (status === 429) return code || 'rate_limit_error';/if (status === 430) return code || 'rate_limit_error';/" "$src"; if cmp -s "$src" "$bak"; then cp "$bak" "$src"; rm -f "$bak"; echo "MUTATION NOT APPLIED"; exit 1; fi; export PGHOST=localhost PGPORT=55432 PGUSER=pdpp PGPASSWORD=pdpp; db=pdpp_hone_tst2_0016; dropdb --if-exists -h localhost -p 55432 -U pdpp $db >/dev/null 2>&1; createdb -h localhost -p 55432 -U pdpp $db >/dev/null 2>&1; rc=0; PDPP_TEST_POSTGRES_URL=postgres://pdpp:pdpp@localhost:55432/$db timeout 600 node --test --test-force-exit test/ingest-failures-oracle.test.js || rc=1; dropdb --if-exists -h localhost -p 55432 -U pdpp $db >/dev/null 2>&1; cp "$bak" "$src"; cmp -s "$src" "$bak" || { echo "RESTORE FAILED"; rm -f "$bak"; exit 1; }; rm -f "$bak"; if [ $rc -eq 1 ]; then echo "MUTANT KILLED"; exit 0; else echo "MUTANT SURVIVED"; exit 1; fi; else echo "BASELINE: mutation oracle not yet created"; exit 0; fi'
# expect: BASELINE prints BASELINE and exits 0 while the oracle file is absent. POST applies the seeded one-line mutant, runs the new test with an isolated Postgres DB, restores the source with cmp verification, and prints MUTANT KILLED only when the new oracle fails against the mutant.
# exit: 0  duration: 0s  verdict: FAIL (output does not contain 'BASELINE')

file:///home/tnunamak/.tmp/pdpp-ops/reference-implementation/runtime/ingest-failures.js:1
if (status === 430) return code || rate_limit_error;// Ingest-failure shaping for the connector runtime.
                    ^^^^^^

SyntaxError: Illegal return statement
    at compileSourceTextModule (node:internal/modules/esm/utils:354:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:91:18)
    at #translate (node:internal/modules/esm/loader:451:20)
    at afterLoad (node:internal/modules/esm/loader:507:29)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:512:12)
    at #getOrCreateModuleJobAfterResolve (node:internal/modules/esm/loader:555:36)
    at afterResolve (node:internal/modules/esm/loader:603:52)
    at ModuleLoader.getOrCreateModuleJob (node:internal/modules/esm/loader:609:12)
    at ModuleJob.syncLink (node:internal/modules/esm/module_job:160:33)
    at ModuleJob.link (node:internal/modules/esm/module_job:245:17)

Node.js v25.8.2
✖ test/ingest-failures-oracle.test.js (23.932158ms)
ℹ tests 1
ℹ suites 0
ℹ pass 0
ℹ fail 1
ℹ cancelled 0
ℹ skipped 0
ℹ todo 0
ℹ duration_ms 27.876206

✖ failing tests:

test at test/ingest-failures-oracle.test.js:1:1
✖ test/ingest-failures-oracle.test.js (23.932158ms)
  'test failed'
MUTANT KILLED
